--- a/contacto.html
+++ b/contacto.html
@@ -11,7 +11,7 @@
     <script type="text/javascript">
         (function() {
             // Inicializar EmailJS con tu Public Key
-            emailjs.init("YOUR_PUBLIC_KEY");
+            emailjs.init("N0S4gsiHs-LZLE7I3");
         })();
     </script>
     <style>
@@ -778,7 +778,7 @@
                     <a href="perfumes.html" class="order-button">Ver Perfumes</a>
                 </div>
                 <div class="contact-form">
-                    <form id="contactForm" action="https://formsubmit.co/neworder@gypsytocrazy.com" method="POST">
+                    <form id="contactForm">
                         <div class="form-group">
                             <label for="name">Nombre</label>
                             <input type="text" id="name" name="name" required minlength="2" maxlength="50">
@@ -789,7 +789,7 @@
                         </div>
                         <div class="form-group">
                             <label for="type">Tipo de Consulta</label>
-                            <select id="type" name="type" required onchange="updateFormAction(this.value)">
+                            <select id="type" name="type" required>
                                 <option value="">Selecciona una opción</option>
                                 <option value="cita">Agendar Cita</option>
                                 <option value="info">Información General</option>
@@ -803,11 +803,6 @@
                             <label for="message">Mensaje</label>
                             <textarea id="message" name="message" required minlength="10" maxlength="1000"></textarea>
                         </div>
-                        <input type="hidden" name="_subject" value="Nuevo mensaje de contacto - GypsyToCrazy">
-                        <input type="hidden" name="_template" value="table">
-                        <input type="hidden" name="_next" value="https://gypsytocrazy.com/gracias.html">
-                        <input type="hidden" name="_captcha" value="true">
-                        <input type="hidden" name="_autoresponse" value="Gracias por tu mensaje. Hemos recibido tu consulta y nos pondremos en contacto contigo lo antes posible.">
                         <button type="submit" class="submit-button">Enviar Mensaje</button>
                         <div class="form-info">
                             <p>• Para agendar una cita, tu mensaje será enviado a: neworder@gypsytocrazy.com</p>
@@ -954,16 +949,6 @@
             popup.classList.remove('active');
         }
 
-        // Función para actualizar la acción del formulario según el tipo de consulta
-        function updateFormAction(type) {
-            const form = document.getElementById('contactForm');
-            if (type === 'cita') {
-                form.action = 'https://formsubmit.co/neworder@gypsytocrazy.com';
-            } else if (type === 'info') {
-                form.action = 'https://formsubmit.co/question@gypsytocrazy.com';
-            }
-        }
-
         // Función para validar el formulario
         function validateForm() {
             const name = document.getElementById('name').value;
@@ -1000,7 +985,26 @@
             return true;
         }
 
-        // Manejo del formulario
+        // Función para enviar email con EmailJS
+        function sendEmail(formData) {
+            const templateParams = {
+                from_name: formData.name,
+                from_email: formData.email,
+                subject: formData.subject,
+                message: formData.message,
+                type: formData.type,
+                to_email: formData.type === 'cita' ? 'neworder@gypsytocrazy.com' : 'question@gypsytocrazy.com'
+            };
+
+            // Usar template según el tipo de consulta
+            const templateId = formData.type === 'cita' ? 'template_citas' : 'template_consultas';
+            const serviceId = 'service_rnps1jf'; // Service ID configurado
+
+            // Enviar email usando EmailJS
+            return emailjs.send(serviceId, templateId, templateParams);
+        }
+
+        // Manejo del formulario con EmailJS
         const contactForm = document.getElementById('contactForm');
         contactForm.addEventListener('submit', async (e) => {
             e.preventDefault();
@@ -1014,21 +1018,33 @@
             submitButton.disabled = true;
 
             try {
-                const formData = new FormData(contactForm);
-                const response = await fetch(contactForm.action, {
-                    method: 'POST',
-                    body: formData
-                });
+                const formData = {
+                    name: document.getElementById('name').value,
+                    email: document.getElementById('email').value,
+                    type: document.getElementById('type').value,
+                    subject: document.getElementById('subject').value,
+                    message: document.getElementById('message').value
+                };
 
-                if (response.ok) {
-                    showThankYouPopup();
-                    contactForm.reset();
-                } else {
-                    throw new Error('Error al enviar el formulario');
+                // Verificar si EmailJS está disponible
+                if (typeof emailjs === 'undefined') {
+                    throw new Error('EmailJS no está cargado correctamente');
                 }
+
+                await sendEmail(formData);
+                showThankYouPopup();
+                contactForm.reset();
             } catch (error) {
                 console.error('Error:', error);
-                alert('Lo sentimos, hubo un error al enviar el mensaje. Por favor, inténtalo de nuevo más tarde.');
+                
+                // Mostrar mensaje de error más específico
+                if (error.message.includes('EmailJS no está cargado')) {
+                    alert('Error: EmailJS no está configurado correctamente. Por favor, verifica la configuración.');
+                } else if (error.message.includes('service') || error.message.includes('template')) {
+                    alert('Error: Service ID o Template ID incorrectos. Por favor, verifica la configuración de EmailJS.');
+                } else {
+                    alert('Lo sentimos, hubo un error al enviar el mensaje. Por favor, inténtalo de nuevo más tarde.');
+                }
             } finally {
                 submitButton.textContent = 'Enviar Mensaje';
                 submitButton.disabled = false;
